Make expiry time in confirmation token to variable in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 jwtSecret=osloemt888@
 jwtExpirationMs=86400000
 validDomain=tietoevry.com
+confirmationTokenValidMinute=5
