Change some naming convention

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ jwtSecret=osloemt888@
 jwtExpirationMs=86400000
 validDomain=tietoevry.com
 confirmationTokenValidMinute=5
+restPasswordCodeValidMinute=5
