--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # PostgreSql database
-#spring.datasource.url=jdbc:postgresql://localhost:5432/employees
+spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -8,14 +8,13 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT
 
 #Show or not log for each sql query
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 #Hibernate ddl auto(create,create-drop,update):with"create-drop" the database
 #schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 
 
 
