--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT
 
 #Show or not log for each sql query
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 #Hibernate ddl auto(create,create-drop,update):with"create-drop" the database
 #schema will be automatically created afresh for every start of application
