Added Unit test for BookingServiceImpl

--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <groups>IntegrationTest</groups>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
