--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,27 @@
-# H2 database
-spring.datasource.url=jdbc:h2:mem:testdb
+# PostgreSql database
+spring.datasource.url=jdbc:postgresql://localhost:5432/employees
+spring.datasource.username=postgres
+spring.datasource.password=root
 
-### PostgreSql database
-#spring.datasource.url=jdbc:postgresql://localhost:5432/employees
-#spring.datasource.username=postgres
-#spring.datasource.password=root
+#Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT
 
-### Keep the connection alive if idle for a long time (needed in production)
-#spring.datasource.testWhileIdle=true
-#spring.datasource.validationQuery=SELECT
+#Show or not log for each sql query
+spring.jpa.show-sql=false
 
-### Show or not log for each sql query
-#spring.jpa.show-sql=true
+#Hibernate ddl auto(create,create-drop,update):with"create-drop" the database
+#schema will be automatically created afresh for every start of application
+spring.jpa.hibernate.ddl-auto=create-drop
+#Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-### Hibernate ddl auto(create,create-drop,update):with"create-drop" the database
-### schema will be automatically created afresh for every start of application
-#spring.jpa.hibernate.ddl-auto=create-drop
 
-#### Allows Hibernate to generate SQL optimized for a particular DBMS
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-### swagger-ui custom path
+
+
+
+# swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 
 ######Email Properties ######
@@ -35,9 +36,8 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-### App Properties
+# App Properties
 jwtSecret=osloemt888@
-#Expired after 24 hours
 jwtExpirationMs=86400000
 validDomain=tietoevry.com
 confirmationTokenValidMinute=10
