--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,28 @@
-# PostgreSql database
+### H2 database for development
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+#### PostgreSql database
 spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-#Keep the connection alive if idle for a long time (needed in production)
+### Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT
 
-#Show or not log for each sql query
+### Show or not log for each sql query
 spring.jpa.show-sql=false
 
-#Hibernate ddl auto(create,create-drop,update):with"create-drop" the database
-#schema will be automatically created afresh for every start of application
+### Hibernate ddl auto(create,create-drop,update):with"create-drop" the database
+### schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
-#Allows Hibernate to generate SQL optimized for a particular DBMS
+### Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
-
-
-
-
-# swagger-ui custom path
+### swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 
-######Email Properties ######
+### Email Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -36,9 +34,11 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-# App Properties
+### App Properties
 jwtSecret=osloemt888@
+# Expired after 24 hours
 jwtExpirationMs=86400000
 validDomain=tietoevry.com
 confirmationTokenValidMinute=10
 restPasswordCodeValidMinute=10
+
