added comment in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 ### H2 database for development
 #spring.datasource.url=jdbc:h2:mem:testdb
 
-#### PostgreSql database
+### PostgreSql database
+### A database "employees" and a user "postgre:root" must setup first
 spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=postgres
 spring.datasource.password=root
