--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,8 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 ### App Properties
 jwtSecret=osloemt888@
 # Expired after 24 hours
-jwtExpirationMs=86400000
+jwtExpirationMs=1000
+#jwtExpirationMs=86400000
 validDomain=tietoevry.com
 confirmationTokenValidMinute=10
 restPasswordCodeValidMinute=10
