--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,19 @@
 #spring.datasource.url=jdbc:h2:mem:testdb
 
 ### PostgreSql database
-### A database "employees" and a user "postgre:root" must setup first
+# A database "employees" and a user "postgre:root" must setup first
 spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=postgres
 spring.datasource.password=root
-
-### Keep the connection alive if idle for a long time (needed in production)
+# Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT
-
-### Show or not log for each sql query
+# Show or not log for each sql query
 spring.jpa.show-sql=false
-
-### Hibernate ddl auto(create,create-drop,update):with"create-drop" the database
-### schema will be automatically created afresh for every start of application
+# Hibernate ddl auto(create,create-drop,update):with"create-drop" the database
+# schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
-### Allows Hibernate to generate SQL optimized for a particular DBMS
+# Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 ### swagger-ui custom path
@@ -37,8 +34,9 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 ### App Properties
 jwtSecret=osloemt888@
-# Expired after 24 hours
+# JWT Expired after 1 second
 jwtExpirationMs=1000
+# JWT Expired after 24 hours
 #jwtExpirationMs=86400000
 validDomain=tietoevry.com
 confirmationTokenValidMinute=10
