Updated pipelines to do verify(that will include unit test, integration test)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,9 +35,9 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 ### App Properties
 jwtSecret=osloemt888@
 # JWT Expired after 1 second
-jwtExpirationMs=1000
+#jwtExpirationMs=1000
 # JWT Expired after 24 hours
-#jwtExpirationMs=86400000
+jwtExpirationMs=86400000
 validDomain=tietoevry.com
 confirmationTokenValidMinute=10
 restPasswordCodeValidMinute=10
