updated JWT expired time to 1 hour

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,10 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 jwtSecret=osloemt888@
 # JWT Expired after 1 second
 #jwtExpirationMs=1000
+# JWT Expired after 1 hour
+jwtExpirationMs=3600000
 # JWT Expired after 24 hours
-jwtExpirationMs=86400000
+#jwtExpirationMs=86400000
 validDomain=tietoevry.com
 confirmationTokenValidMinute=10
 restPasswordCodeValidMinute=10
