Added evry.com as valid domain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ jwtSecret=osloemt888@
 jwtExpirationMs=3600000
 # JWT Expired after 24 hours
 #jwtExpirationMs=86400000
-validDomain=tietoevry.com
+validDomain=tietoevry.com,evry.com
 confirmationTokenValidMinute=10
 restPasswordCodeValidMinute=10
 
